examples/simple/undefined/UB-CCV6-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. (RV-Match team). All Rights Reserved.

void f(){}
int main(void){
	return f();
}
